--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
     </div>
 
     <!-- 页脚区域 -->
-    <footer class="footer mt-8 py-6 border-t border-[#333] bg-[#0a0a0a]">
+  <!--  <footer class="footer mt-8 py-6 border-t border-[#333] bg-[#0a0a0a]">
         <div class="container mx-auto px-4">
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <div class="mb-4 md:mb-0">
@@ -313,7 +313,7 @@
             </div>
         </div>
     </footer>
-
+-->
     <!-- 详情模态框 -->
     <div id="modal" class="fixed inset-0 bg-black/95 hidden flex items-center justify-center transition-opacity duration-300 z-40">
         <div class="bg-[#111] p-8 rounded-lg w-11/12 max-w-4xl border border-[#333] max-h-[90vh] flex flex-col">
@@ -435,7 +435,7 @@
     </script>
 
     <!-- 版本检测脚本 -->
-    <script src="js/version-check.js"></script>
+<!--    <script src="js/version-check.js"></script>-->
 
     <!-- 弹窗显示脚本 -->
     <script>
