--- a/player.html
+++ b/player.html
@@ -12,7 +12,7 @@
 
     <script src="libs/tailwindcss.min.js"></script>
     <script src="js/wakelock.js"></script>
-    <script src="js/version-check.js"></script>
+<!--    <script src="js/version-check.js"></script>-->
     <link rel="stylesheet" href="css/styles.css">
     <style>
         body, html {
