--- a/about.html
+++ b/about.html
@@ -15,13 +15,13 @@
 			<h1 class="text-5xl font-bold gradient-text">关于我们</h1>
 		</header>
 		<main class="text-center">
-			<p class="text-gray-300 mb-4">
-				本项目代码托管在 GitHub 上，欢迎访问我们的仓库：
-				<a href="https://github.com/LibreSpark/LibreTV" class="text-blue-400 hover:underline" target="_blank" rel="noopener">https://github.com/LibreSpark/LibreTV</a>
-			</p>
-			<p class="text-gray-300 mb-8">
-				LibreTV 是一个免费的在线视频搜索平台，提供视频搜索和播放服务，致力于为用户带来最佳体验。
-			</p>
+<!--			<p class="text-gray-300 mb-4">-->
+<!--				本项目代码托管在 GitHub 上，欢迎访问我们的仓库：-->
+<!--				<a href="https://github.com/LibreSpark/LibreTV" class="text-blue-400 hover:underline" target="_blank" rel="noopener">https://github.com/LibreSpark/LibreTV</a>-->
+<!--			</p>-->
+<!--			<p class="text-gray-300 mb-8">-->
+<!--				LibreTV 是一个免费的在线视频搜索平台，提供视频搜索和播放服务，致力于为用户带来最佳体验。-->
+<!--			</p>-->
 			
 			<!-- 版权声明与投诉机制 -->
 			<div class="mt-12 mb-8 max-w-2xl mx-auto border border-gray-700 rounded-lg p-6 bg-[#111]">
