改进测试方案，支持safra,删除重新检查，

--- a/player.html
+++ b/player.html
@@ -110,11 +110,11 @@
             <div id="errorMessage" class="mb-4 p-3 bg-red-600/20 border border-red-600/30 rounded-lg text-red-400 text-sm hidden"></div>
             <div id="successMessage" class="mb-4 p-3 bg-green-600/20 border border-green-600/30 rounded-lg text-green-400 text-sm hidden"></div>
             
-            <div class="text-center">
+            <!-- <div class="text-center">
                 <button onclick="checkAuthStatus()" class="text-gray-400 hover:text-white transition-colors">
                     重新检查
                 </button>
-            </div>
+            </div> -->
         </div>
     </div>
 
