--- a/player.html
+++ b/player.html
@@ -55,11 +55,11 @@
             <!-- 登录表单 -->
             <form id="loginForm" class="space-y-4 mb-4">
                 <div>
-                    <input type="text" id="loginUsername" placeholder="用户名/邮箱" 
+                    <input autocomplete="username" type="text" id="loginUsername" placeholder="用户名/邮箱" 
                            class="w-full px-4 py-3 bg-[#222] border border-[#333] rounded-lg text-white placeholder-gray-400 focus:outline-none focus:border-blue-500">
                 </div>
                 <div>
-                    <input type="password" id="loginPassword" placeholder="密码" 
+                    <input autocomplete="current-password" type="password" id="loginPassword" placeholder="密码" 
                            class="w-full px-4 py-3 bg-[#222] border border-[#333] rounded-lg text-white placeholder-gray-400 focus:outline-none focus:border-blue-500">
                 </div>
                 <button type="submit" id="loginBtn" class="w-full bg-gradient-to-r from-blue-600 to-purple-600 hover:from-blue-700 hover:to-purple-700 text-white px-4 py-3 rounded-lg transition-all duration-300 font-semibold">
@@ -76,15 +76,15 @@
             <!-- 注册表单 -->
             <form id="registerForm" class="space-y-4 mb-4 hidden">
                 <div>
-                    <input type="text" id="registerUsername" placeholder="用户名/邮箱" 
+                    <input autocomplete="username" type="text" id="registerUsername" placeholder="用户名/邮箱" 
                            class="w-full px-4 py-3 bg-[#222] border border-[#333] rounded-lg text-white placeholder-gray-400 focus:outline-none focus:border-blue-500">
                 </div>
                 <div>
-                    <input type="password" id="registerPassword" placeholder="密码" 
+                    <input autocomplete="current-password" type="password" id="registerPassword" placeholder="密码" 
                            class="w-full px-4 py-3 bg-[#222] border border-[#333] rounded-lg text-white placeholder-gray-400 focus:outline-none focus:border-blue-500">
                 </div>
                 <div>
-                    <input type="password" id="confirmPassword" placeholder="确认密码" 
+                    <input autocomplete="new-password" type="password" id="confirmPassword" placeholder="确认密码" 
                            class="w-full px-4 py-3 bg-[#222] border border-[#333] rounded-lg text-white placeholder-gray-400 focus:outline-none focus:border-blue-500">
                 </div>
                 <button type="submit" id="registerBtn" class="w-full bg-gradient-to-r from-green-600 to-emerald-600 hover:from-green-700 hover:to-emerald-700 text-white px-4 py-3 rounded-lg transition-all duration-300 font-semibold">
@@ -92,7 +92,7 @@
                     <span class="loading hidden">
                         <svg class="animate-spin h-5 w-5 mx-auto" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
                             <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
-                            <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+                            <!-- <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path> -->
                         </svg>
                     </span>
                 </button>
