认证系统增强

--- a/auth.html
+++ b/auth.html
@@ -187,10 +187,6 @@
     </style>
 </head>
 <body class="page-bg">
-    <a href="index.html" class="back-home">
-        ← 返回首页
-    </a>
-    
     <div class="auth-container">
         <div class="auth-card">
             <!-- Logo和标题 -->
@@ -257,6 +253,6 @@
         </div>
     </div>
     
-    <script src="js/auth.js"></script>
+    <script src="js/auth-system.js"></script>
 </body>
 </html>
