--- a/auth.html
+++ b/auth.html
@@ -221,13 +221,13 @@
             <form id="registerForm" class="auth-form" style="display: none;">
                 <div class="form-group">
                     <label for="registerUsername" class="form-label">用户名</label>
-                    <input type="text" id="registerUsername" class="form-input" placeholder="请输入用户名（3-20个字符）" required>
+                    <input type="text" id="registerUsername" class="form-input" placeholder="请输入用户名,邮箱格式" required>
                 </div>
                 
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label for="registerEmail" class="form-label">邮箱（可选）</label>
                     <input type="email" id="registerEmail" class="form-input" placeholder="请输入邮箱地址">
-                </div>
+                </div> -->
                 
                 <div class="form-group">
                     <label for="registerPassword" class="form-label">密码</label>
