用户登录点击查看声明进入智能优选环节

--- a/index.html
+++ b/index.html
@@ -448,6 +448,7 @@
                     localStorage.setItem('hasSeenDisclaimer', 'true');
                     // 隐藏弹窗
                     disclaimerModal.style.display = 'none';
+                    smartSelectAllAPIs()
                 });
             }
         });
