--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                     localStorage.setItem('hasSeenDisclaimer', 'true');
                     // 隐藏弹窗
                     disclaimerModal.style.display = 'none';
-                    smartSelectAllAPIs()
+                    // smartSelectAllAPIs()
                 });
             }
         });
