--- a/player.html
+++ b/player.html
@@ -60,11 +60,8 @@
             </div>
         </div>
 
-        <!-- 减少间距 -->
-        <div class="player-spacing-small"></div>
-
         <!-- 添加自动播放开关、播放控制按钮和功能按钮 -->
-        <div class="player-container mb-2">
+        <div class="player-container mb-2"  style="margin-top: 12px;">
             <div class="flex items-center justify-between relative button-layout">
                 <!-- 左侧按钮组：自动连播、集数切换、倒序排列 -->
                 <div class="flex items-center gap-2 left-buttons">
@@ -154,33 +151,8 @@
             </div>
         </div>
 
-        <!-- 缓存状态面板 -->
-        <div id="cacheStatusPanel" class="player-container hidden">
-            <div class="p-3 bg-[#111] border border-[#333] rounded-lg text-sm">
-                <div class="flex justify-between items-center mb-2">
-                    <div class="text-gray-300">缓存状态</div>
-                    <div class="flex items-center gap-2">
-                        <button onclick="refreshCacheStatus()"
-                            class="px-2 py-1 bg-[#222] hover:bg-[#333] border border-[#333] rounded text-xs">刷新</button>
-                        <button onclick="clearAllCache()"
-                            class="px-2 py-1 bg-red-600 hover:bg-red-700 border border-red-700 rounded text-xs">清空缓存</button>
-                    </div>
-                </div>
-                <div id="cacheStatusBody" class="text-gray-400 space-y-1">
-                    <div>后台：<span id="cacheBackend">-</span></div>
-                    <div>占用：<span id="cacheUsed">-</span> / <span id="cacheMax">-</span></div>
-                    <div>条目：<span id="cacheItems">-</span></div>
-                    <div>TTL：<span id="cacheTTL">-</span></div>
-                    <div class="mt-1 border-t border-[#222] pt-2">预取：并发 <span id="prefetchConcurrent">-</span>，窗口 <span
-                            id="prefetchWindow">-</span>，进行中 <span id="prefetchRunning">-</span>，队列 <span
-                            id="prefetchQueue">-</span></div>
-                </div>
-            </div>
-        </div>
-        <!-- 减少间距 -->
-        <div class="player-spacing-small"></div>
         <!-- 集数网格 - 默认隐藏 -->
-        <div class="player-container hidden" id="episodesGrid">
+        <div class="player-container hidden" id="episodesGrid"  style="margin-top: 12px;">
             <div class="episode-grid">
                 <div class="grid grid-cols-2 sm:grid-cols-4 md:grid-cols-6 lg:grid-cols-8 gap-2" id="episodesList">
                     <!-- 集数将在这里动态加载 -->
@@ -198,37 +170,7 @@
         <span id="shortcutText"></span>
     </div>
 
-    <!-- 页脚区域 -->
-    <footer class="footer mt-2 py-6 border-t border-[#333] bg-[#0a0a0a]">
-        <div class="container mx-auto px-4">
-            <div class="flex flex-col md:flex-row justify-between items-center">
-                <div class="mb-4 md:mb-0">
-                    <div class="flex items-center justify-center md:justify-start">
-                        <svg class="w-6 h-6 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M15 10l4.553-2.276A1 1 0 0121 8.618v6.764a1 1 0 01-1.447.894L15 14M5 18h8a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v8a2 2 0 002 2z">
-                            </path>
-                        </svg>
-                        <span class="gradient-text font-bold">LibreTV</span>
-                    </div>
-                    <p class="text-gray-500 text-sm mt-2 text-center md:text-left">© 2025 LibreTV - 自由观影，畅享精彩</p>
-                </div>
 
-                <div class="text-center md:text-right">
-                    <p class="text-gray-500 text-sm max-w-md">
-                        免责声明：本站仅为视频搜索工具，不存储、上传或分发任何视频内容。
-                        所有视频均来自第三方API接口。如有侵权，请联系相关内容提供方。
-                    </p>
-                    <div class="mt-2 flex justify-center md:justify-end space-x-4">
-                        <a href="about.html" class="text-gray-400 hover:text-white text-sm transition-colors">关于我们</a>
-                        <a href="privacy.html" class="text-gray-400 hover:text-white text-sm transition-colors">隐私政策</a>
-                        <a href="https://help.unicef.org/#donation-form" target="_blank" rel="noopener"
-                            class="text-blue-400 hover:text-blue-300 text-sm transition-colors">捐赠</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
 
     <!-- 引入认证系统 -->
     <script src="js/auth-system.js"></script>
