douban.js只处理他自己的事情

--- a/index.html
+++ b/index.html
@@ -169,18 +169,13 @@
                 <!-- 首页内容选择器 -->
                 <div class="flex items-center justify-between">
                     <div>
-                        <label class="text-sm font-medium text-gray-400">首页展示内容</label>
-                        <p class="text-xs text-gray-500 mt-1">选择首页显示内容</p>
+                        <label class="text-sm font-medium text-gray-400">首页类型</label>
                     </div>
                     <div class="flex space-x-2">
                         <button id="contentToggle1" class="px-2 py-1 text-xs rounded bg-pink-600 text-white">豆瓣热门</button>
                         <button id="contentToggle2" class="px-2 py-1 text-xs rounded bg-[#333] text-gray-300 hover:text-white">用户收藏</button>
                         <button id="contentToggle3" class="px-2 py-1 text-xs rounded bg-[#333] text-gray-300 hover:text-white">仅搜索</button>
                     </div>
-                </div>
-                <!-- 添加说明文字 -->
-                <div class="text-xs text-gray-500 mt-1">
-                    <span id="contentToggleLabel">豆瓣热门推荐</span>
                 </div>
             </div>
 
